<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:layout_editor_absoluteX="28dp"
    tools:layout_editor_absoluteY="9dp">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/labelBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:focusable="false"
        android:hint="select date"
        android:inputType="none"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/DateOfBirth"
        app:layout_constraintEnd_toEndOf="@+id/labelGender"
        app:layout_constraintTop_toBottomOf="@+id/labelGender" />

    <TextView
        android:id="@+id/DateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/date_of_birth"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelBirthday"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelGender"
        app:layout_constraintStart_toStartOf="@+id/DateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/labelGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelBirthday"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/labelWeight"
        app:layout_constraintTop_toBottomOf="@+id/labelWeight" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelGender"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelWeight"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <EditText
        android:id="@+id/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelGender"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/labelHeight"
        app:layout_constraintTop_toBottomOf="@+id/labelHeight" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelWeight"
        android:text="@string/height"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelHeight"
        app:layout_constraintStart_toStartOf="@+id/weight" />

    <EditText
        android:id="@+id/labelHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelWeight"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        tools:layout_editor_absoluteX="355dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.048661802" />

</androidx.constraintlayout.widget.ConstraintLayout>